syntax = "proto3";

package sense;


message TargetListRequest {
    enum Type {
        NONE = 0;
        WIFI = 1;
        BLTH = 2;
        AP   = 3;
	}
    Type typeMAC = 1; /* MAC Type to distinguish between wifi and bt */
}

message TargetListResponse {
    message MacStruct {
        string addrMAC    = 1;
        bool markDeletion = 2;
    }
    repeated MacStruct targetMAC = 1;
}

service TargetListQueryService {
    rpc TargetFullReadQuery (TargetListRequest) returns (TargetListResponse) {}
    rpc TargetDeltaReadQuery (TargetListRequest) returns (TargetListResponse) {}
}
